--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
     "postcss-load-config": "^3.1.3",
     "postcss-loader": "^6.2.1",
     "postcss-rem-to-responsive-pixel": "^5.1.1",
+    "prettier": "^2.6.2",
+    "redent": "3.0.0",
     "regexp-replace": "^1.0.2",
     "rollup": "^2.70.2",
     "rollup-plugin-terser": "^7.0.2",
