--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@tsconfig/recommended": "^1.0.1",
     "@types/esm": "^3.2.0",
     "@types/jest": "^27.5.1",
+    "@types/loader-utils": "^2.0.3",
     "@types/node": "^17.0.29",
     "@types/tailwindcss": "^3.0.9",
     "@types/webpack": "^5.28.0",
@@ -119,6 +120,7 @@
     "@babel/generator": "7.17.9",
     "@babel/parser": "7.17.9",
     "@babel/traverse": "7.17.9",
-    "webpack-sources": "^3.2.3"
+    "webpack-sources": "^3.2.3",
+    "loader-utils": "^2.0.2"
   }
 }
