--- a/demo/rax-app/src/app.json
+++ b/demo/rax-app/src/app.json
@@ -2,7 +2,7 @@
   "routes": [
     {
       "path": "/",
-      "source": "pages/Home/index"
+      "source": "pages/index/index"
     }
   ],
   "window": {
