--- a/tsconfig.dts.json
+++ b/tsconfig.dts.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
     "declaration": true,
-    "declarationDir": "dist/types"
+    "declarationDir": "types"
   },
   "exclude": ["dist", "node_modules", "test/types", "./*.d.ts"]
 }
