--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -60,6 +60,7 @@
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "sass": "^1.52.3",
     "tailwindcss": "^3.1.3",
+    "tailwindcss-rem2px-preset": "^1.0.2",
     "typescript": "^4.7.3",
     "vite": "^2.9.12",
     "weapp-tailwindcss-webpack-plugin": "^1.6.4"
