--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -69,6 +69,7 @@
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "tailwindcss": "^3.0.24",
+    "tailwindcss-rem2px-preset": "^1.0.2",
     "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.1.2",
