--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -31,6 +31,7 @@
     "rax-app": "3.8.19",
     "stylelint": "^14.9.0",
     "tailwindcss": "^3.1.1",
+    "tailwindcss-rem2px-preset": "^1.0.2",
     "weapp-tailwindcss-webpack-plugin": "^1.6.4"
   },
   "private": true,
