--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -60,8 +60,10 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.14",
+    "postcss-rem-to-responsive-pixel": "^5.1.3",
     "stylelint": "14.8.5",
     "tailwindcss": "^3.0.23",
+    "tailwindcss-rem2px-preset": "^1.0.2",
     "typescript": "^4.7.2",
     "weapp-tailwindcss-webpack-plugin": "^1.6.4"
   },
