--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -58,8 +58,10 @@
     "eslint-config-taro": "3.4.1",
     "eslint-plugin-vue": "^6.x",
     "postcss": "^8.4.6",
+    "postcss-rem-to-responsive-pixel": "^5.1.3",
     "stylelint": "9.3.0",
     "tailwindcss": "^3.0.21",
+    "tailwindcss-rem2px-preset": "^1.0.2",
     "typescript": "^4.1.0",
     "vue-loader": "^15.9.2",
     "weapp-tailwindcss-webpack-plugin": "^1.6.4"
