--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "raw": "ts-node scripts/raw",
     "demo:install": "node scripts/demo/install.js",
     "demo:build": "node scripts/demo/build.js",
-    "demo:e2e": "node scripts/demo/e2e.js"
+    "demo:e2e": "node scripts/demo/e2e.js",
+    "demo:link": "node scripts/demo/link.js"
   },
   "repository": {
     "type": "git",
@@ -78,9 +79,9 @@
   "homepage": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin#readme",
   "devDependencies": {
     "@babel/types": "^7.17.0",
-    "@icebreakers/cli": "^0.0.5",
+    "@icebreakers/cli": "^0.0.8",
     "@rollup/plugin-alias": "^3.1.8",
-    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-typescript": "^8.3.3",
@@ -89,7 +90,7 @@
     "@types/jest": "^27.5.1",
     "@types/loader-utils": "^2.0.3",
     "@types/node": "^17.0.42",
-    "@types/tailwindcss": "^3.0.9",
+    "@types/tailwindcss": "^3.0.11",
     "@types/webpack": "^5.28.0",
     "@types/webpack-sources": "^3.2.0",
     "@types/webpack4": "npm:@types/webpack@4",
@@ -107,7 +108,7 @@
     "esm": "^3.2.25",
     "execa": "5",
     "jest": "^27.5.1",
-    "memfs": "^3.4.6",
+    "memfs": "^3.4.7",
     "miniprogram-automator": "^0.11.0",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
@@ -125,7 +126,7 @@
     "ttypescript": "^1.5.13",
     "typescript": "^4.7.4",
     "typescript-transform-paths": "^3.3.1",
-    "vite": "^2.9.12",
+    "vite": "^2.9.13",
     "webpack": "^5.73.0",
     "webpack4": "npm:webpack@webpack-4"
   },
