--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src"
+    "rootDir": "src",
+    "removeComments": true
   },
   "include": ["src/**/*", "types/**/*"],
   "exclude": ["dist", "node_modules", "test/types", "./*.d.ts"]
