--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "demo:install:beta": "node scripts/demo/install.js --beta",
     "demo:remove-deps": "node scripts/demo/del.js",
     "demo:remove-test-coms": "node scripts/demo/remove-test-coms.js",
-    "sync": "open-cli https://npmmirror.com/sync/weapp-tailwindcss-webpack-plugin"
+    "sync": "open-cli https://npmmirror.com/sync/weapp-tailwindcss-webpack-plugin",
+    "generate:readme": "ts-node readme/write.ts"
   },
   "repository": {
     "type": "git",
@@ -92,6 +93,7 @@
   "devDependencies": {
     "@babel/types": "^7.17.0",
     "@icebreakers/cli": "^0.0.9",
+    "@icebreakers/readme": "^0.0.1",
     "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-json": "^4.1.0",
