--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -71,7 +71,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.2",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.1"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.2-beta.0"
   },
   "engines": {
     "node": ">=12.0.0"
