--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -70,6 +70,6 @@
     "typescript": "^4.7.3",
     "vite": "^2.9.14",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.1"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.2-beta.0"
   }
 }
