--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,19 +5,12 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Debug Jest Tests",
       "type": "node",
-      "name": "vscode-jest-tests",
       "request": "launch",
-      "args": ["--runInBand", "--watchAll=false", "--testNamePattern=\"static node\""],
-      "cwd": "${workspaceFolder}",
-      "outFiles": ["${workspaceFolder}/**/*.js", "!**/node_modules/**"],
+      "runtimeArgs": ["--inspect-brk", "${workspaceRoot}/node_modules/jest/bin/jest.js", "--runInBand"],
       "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen",
-      "disableOptimisticBPs": true,
-      "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "windows": {
-        "program": "${workspaceFolder}/node_modules/jest/bin/jest"
-      }
+      "internalConsoleOptions": "neverOpen"
     }
   ]
 }
