--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -81,7 +81,7 @@
     "vue-template-compiler": "^2.7.8",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.2",
+    "weapp-tailwindcss-webpack-plugin": "^1.9.3-beta.0",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-server": "^4.9.3",
