--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -72,7 +72,7 @@
     "typescript": "^4.7.2",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.2"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.3-beta.0"
   },
   "engines": {
     "node": ">=12.0.0"
