--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -66,7 +66,7 @@
     "typescript": "^4.8.3",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.3-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.9.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.9.2",
     "webpack-sources": "^3.2.3"
