--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -72,6 +72,6 @@
     "vue-loader": "^17.0.0",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.9.3-beta.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.9.3"
   }
 }
