--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -70,6 +70,7 @@
     "sass-loader": "^13.0.2",
     "stylus": "^0.58.1",
     "stylus-loader": "^7.0.0",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.1.7",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-jest": "^27.1.2",
