--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -61,6 +61,7 @@
     "run-script-os": "^1.1.6",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.1.8",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.8.3",
