--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -34,6 +34,7 @@
     "prettier": "^2.6.2",
     "rax-app": "3.8.22",
     "stylelint": "^14.9.0",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
