--- a/demo/remax-app/package.json
+++ b/demo/remax-app/package.json
@@ -26,6 +26,7 @@
     "postcss": "7",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
