--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -67,6 +67,7 @@
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
     "stylelint": "14.9.1",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.2",
