--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -79,6 +79,7 @@
     "postcss-rpx-transform": "^1.0.1",
     "style-loader": "1.3.0",
     "stylelint": "^14.4.0",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.1.6",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.1.0",
