--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -66,6 +66,7 @@
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.54.8",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.1.8",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.7.3",
