--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -106,6 +106,7 @@
     "sass": "^1.54.2",
     "sass-loader": "10",
     "speed-measure-webpack-plugin": "^1.5.0",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.0.0",
