--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -39,54 +39,54 @@
   ],
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.5.5",
-    "@tarojs/helper": "3.5.5",
-    "@tarojs/plugin-framework-vue2": "3.5.5",
-    "@tarojs/plugin-platform-alipay": "3.5.5",
-    "@tarojs/plugin-platform-jd": "3.5.5",
-    "@tarojs/plugin-platform-qq": "3.5.5",
-    "@tarojs/plugin-platform-swan": "3.5.5",
-    "@tarojs/plugin-platform-tt": "3.5.5",
-    "@tarojs/plugin-platform-weapp": "3.5.5",
-    "@tarojs/router": "3.5.5",
-    "@tarojs/runtime": "3.5.5",
-    "@tarojs/shared": "3.5.5",
-    "@tarojs/taro": "3.5.5",
-    "@tarojs/taro-h5": "3.5.5",
-    "vue": "^2.5.0",
-    "vue-template-compiler": "^2.5.0"
+    "@babel/runtime": "^7.19.0",
+    "@tarojs/components": "3.5.6",
+    "@tarojs/helper": "3.5.6",
+    "@tarojs/plugin-framework-vue2": "3.5.6",
+    "@tarojs/plugin-platform-alipay": "3.5.6",
+    "@tarojs/plugin-platform-jd": "3.5.6",
+    "@tarojs/plugin-platform-qq": "3.5.6",
+    "@tarojs/plugin-platform-swan": "3.5.6",
+    "@tarojs/plugin-platform-tt": "3.5.6",
+    "@tarojs/plugin-platform-weapp": "3.5.6",
+    "@tarojs/router": "3.5.6",
+    "@tarojs/runtime": "3.5.6",
+    "@tarojs/shared": "3.5.6",
+    "@tarojs/taro": "3.5.6",
+    "@tarojs/taro-h5": "3.5.6",
+    "vue": "~2.6.14",
+    "vue-template-compiler": "~2.6.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@tarojs/cli": "3.5.5",
-    "@tarojs/mini-runner": "3.5.1",
-    "@tarojs/webpack-runner": "3.5.1",
-    "@tarojs/webpack5-runner": "3.5.5",
-    "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@babel/core": "^7.19.3",
+    "@tarojs/cli": "3.5.6",
+    "@tarojs/mini-runner": "3.5.6",
+    "@tarojs/webpack-runner": "3.5.6",
+    "@tarojs/webpack5-runner": "3.5.6",
+    "@types/webpack-env": "^1.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "@vue/babel-preset-jsx": "^1.2.4",
-    "autoprefixer": "^10.4.2",
-    "babel-preset-taro": "3.5.5",
+    "autoprefixer": "^10.4.12",
+    "babel-preset-taro": "3.5.6",
     "cross-env": "^7.0.3",
-    "css-loader": "3.4.2",
-    "eslint": "^8.12.0",
-    "eslint-config-taro": "3.5.5",
-    "eslint-plugin-vue": "^6.x",
-    "postcss": "^8.4.6",
+    "css-loader": "6.7.1",
+    "eslint": "^8.24.0",
+    "eslint-config-taro": "3.5.6",
+    "eslint-plugin-vue": "^9.5.1",
+    "postcss": "^8.4.16",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
-    "style-loader": "1.3.0",
-    "stylelint": "^14.4.0",
+    "style-loader": "3.3.1",
+    "stylelint": "^14.13.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.1.8",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "^4.1.0",
+    "typescript": "^4.8.4",
     "vue-loader": "^15.9.2",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^1.9.3",
-    "webpack": "5.69.0"
+    "webpack": "5.74.0"
   }
 }
