--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -69,10 +69,10 @@
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.1.8",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "^4.7.3",
+    "typescript": "~4.6.0",
     "vite": "^2.9.14",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.10.0-beta.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.10.0"
   }
 }
