--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -109,11 +109,11 @@
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~4.7.0",
+    "typescript": "~4.6.0",
     "vue-template-compiler": "^2.6.11",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.10.0-beta.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.10.0"
   },
   "browserslist": [
     "Android >= 4.4",
