--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@types/lodash.groupby": "^4.6.7",
     "@types/lodash.memoize": "^4.1.7",
     "@types/memory-fs": "^0.3.3",
+    "@types/micromatch": "^4.0.2",
     "@types/node": "^18.7.23",
     "@types/object-hash": "^2.2.1",
     "@types/tailwindcss": "^3.1.0",
@@ -171,6 +172,7 @@
     "@babel/parser": "7.19.3",
     "@babel/traverse": "7.19.3",
     "loader-utils": "^2.0.2",
+    "micromatch": "^4.0.5",
     "postcss": "^8.4.16",
     "postcss-selector-parser": "^6.0.10",
     "webpack-sources": "^3.2.3"
