--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.10.0",
+  "version": "1.11.0-beta.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -104,8 +104,6 @@
     "@types/jest": "^29.1.1",
     "@types/loader-utils": "^2.0.3",
     "@types/lodash": "^4.14.186",
-    "@types/lodash.groupby": "^4.6.7",
-    "@types/lodash.memoize": "^4.1.7",
     "@types/memory-fs": "^0.3.3",
     "@types/micromatch": "^4.0.2",
     "@types/node": "^18.7.23",
@@ -136,8 +134,6 @@
     "html-loader1": "npm:html-loader@1.3.2",
     "jest": "^29.0.3",
     "lodash": "^4.17.21",
-    "lodash.groupby": "^4.6.0",
-    "lodash.memoize": "^4.1.2",
     "memfs": "^3.4.7",
     "memory-fs": "^0.5.0",
     "miniprogram-automator": "^0.11.0",
