--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
   },
   "homepage": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin#readme",
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-react": "^7.18.6",
     "@babel/types": "^7.17.0",
     "@icebreakers/cli": "^0.0.9",
     "@icebreakers/readme": "^0.0.1",
@@ -120,6 +122,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "autoprefixer": "^10.4.12",
+    "babel-loader": "^8.2.5",
     "chalk": "4.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
@@ -150,6 +153,8 @@
     "postcss-loader": "^7.0.1",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.8.3",
