--- a/package.json
+++ b/package.json
@@ -146,6 +146,8 @@
     "lodash": "^4.17.21",
     "memfs": "^3.4.7",
     "memory-fs": "^0.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "mini-css-extract-plugin1": "npm:mini-css-extract-plugin@1.6.2",
     "miniprogram-automator": "^0.11.0",
     "object-hash": "^3.0.0",
     "open-cli": "^7.1.0",
