--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "open-cli": "^7.1.0",
     "postcss-load-config": "^4.0.1",
     "postcss-loader": "^7.0.1",
+    "postcss-loader4": "npm:postcss-loader@^4.3.0",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
